#4 added js-* prefixes

--- a/src/blocks/expander/expander.pug
+++ b/src/blocks/expander/expander.pug
@@ -1,6 +1,6 @@
 mixin expander(data)
   .expander
-    .expander__header#expander-header= data.title
+    .expander__header.js-expander= data.title
     .expander__list#expander-list(class=data.hide ? 'expander__list--hide': '')
       include ../checkbox/checkbox
       each item in data.list
