--- a/src/pages/form-elements/form-elements.pug
+++ b/src/pages/form-elements/form-elements.pug
@@ -171,7 +171,7 @@ html
           .form-elements__head.form-elements__head--accent
             .form-elements__title Range slider
           .form-elements__slider
-            input.slider
+            input.slider.js-slider
 
         .form-elements__item
           .form-elements__head.form-elements__head--accent
