--- a/src/pages/room-details/room-details.pug
+++ b/src/pages/room-details/room-details.pug
@@ -36,7 +36,7 @@ block content
       .room-details__room-item
         h2.room-details__title Впечатления от номера
         .statistic.room-details__statistic
-          div(class="donut statistic__donut" data-donut='[{"value": 65, "color": "#BC9CFF", "bold": true}, {"value": 65, "color": "#6FCF97"}, {"value": 130, "color": "#FFE39C"}]')
+          div(class="donut statistic__donut js-donut" data-donut='[{"value": 65, "color": "#BC9CFF", "bold": true}, {"value": 65, "color": "#6FCF97"}, {"value": 130, "color": "#FFE39C"}]')
 
           ul.bullet.statistic__list
             li.bullet--excellent.bullet--small Великолепно
