--- a/src/pages/search-room/search-room.pug
+++ b/src/pages/search-room/search-room.pug
@@ -20,7 +20,7 @@ block content
         .search-room__sidebar-item
           h3.search-room__sidebar-item-title Диапазон цен
           .search-room__slider
-            input.slider
+            input.slider.js-slider
             div Стоимость за сутки пребывания в номере
         .search-room__sidebar-item
           h3.search-room__sidebar-item-title checkbox buttons
