--- a/src/blocks/header/header.pug
+++ b/src/blocks/header/header.pug
@@ -15,4 +15,4 @@ mixin header(obj)
       
       button.header__enter-toggle.icon-button account_box
       
-      button.header__menu-toggle.icon-button#menu_toggle menu
+      button.header__menu-toggle.icon-button.js-menu menu
