--- a/src/pages/headers-footers/headers-footers.pug
+++ b/src/pages/headers-footers/headers-footers.pug
@@ -16,7 +16,7 @@ html
         }, 
         {
         text: 'Services',
-        classes: ['menu__item', 'menu__submenu'],
+        classes: ['menu__item', 'menu__submenu', 'js-menu__submenu'],
         link: [
         {
           text: 'First',
