--- a/src/pages/main-layout/main-layout.pug
+++ b/src/pages/main-layout/main-layout.pug
@@ -32,7 +32,7 @@ html
         }, 
         {
         text: 'Услуги',
-        classes: ['menu__item', 'menu__submenu'],
+        classes: ['menu__item', 'menu__submenu', 'js-menu__submenu'],
         link: [
         {
           text: 'First',
@@ -57,7 +57,7 @@ html
         },
         {
         text: 'Соглашения',
-        classes: ['menu__item', 'menu__submenu'],
+        classes: ['menu__item', 'menu__submenu', 'js-menu__submenu'],
         link: [
           {
           text: 'First',
