--- a/src/pages/sign-in/sign-in.pug
+++ b/src/pages/sign-in/sign-in.pug
@@ -1,13 +1,14 @@
 extends ../landing-layout/landing-layout
 
+include ../../blocks/hero/hero
+include ../../blocks/enter-card/enter-card
+
 block title
   title Sign In
 
 block hero
-  include ../../blocks/hero/hero.pug
   +hero({text: '', theme: 'secondary'})
 
 block card
-  include ../../blocks/enter-card/enter-card
   .sign-in
     +enter-card()
