--- a/src/blocks/light-footer/light-footer.pug
+++ b/src/blocks/light-footer/light-footer.pug
@@ -1,8 +1,9 @@
+include ../socials/socials
+
 mixin light-footer()
   footer.light-footer.wrapper
     .site-logo
     .light-footer__content
       | Lorem ipsum dolor sit amet consectetur adipiscing elit aliquam 
       | eget nullam pellentesque aliquam curabitur cociis.
-    include ../socials/socials.pug 
     +socials()
