--- a/src/blocks/bullet/bullet.pug
+++ b/src/blocks/bullet/bullet.pug
@@ -1,5 +1,5 @@
-mixin bullet(data)
+mixin bullet(listItems)
   ul.bullet
-    each item in data
+    each item in listItems
       li
         span= item
