--- a/src/blocks/image-card/image-card.pug
+++ b/src/blocks/image-card/image-card.pug
@@ -3,17 +3,17 @@ include ../apartment-info/apartment-info
 include ../price/price 
 include ../rating/rating
 
-mixin image-card(data)
+mixin image-card({image, arrows, position, lux, price, rating, comments})
   .image-card
-    +gallery(data.image, data.arrows)
+    +gallery(image, arrows)
     .image-card__body
       .image-card__item.image-card__item--border
-        +apartment-info({number: data.position, lux: data.lux})
+        +apartment-info({number: position, lux: lux})
       .image-card__item.image-card__item--right.image-card__item--border
-        +price(data.price)
+        +price(price)
       .image-card__item.image-card__item--rating
-        +rating(data.rating)
+        +rating(rating)
       .image-card__item.image-card__item--right
         b 
-          | #{data.comments} 
+          | #{comments} 
         | Отзывов
