--- a/src/blocks/like/like.pug
+++ b/src/blocks/like/like.pug
@@ -1,4 +1,4 @@
-mixin like({liked, lides})
+mixin like({liked, likes})
   if liked
     .like.like--liked= likes
       i.like__icon.like__icon--liked favorite
