--- a/src/blocks/subscription/subscription.pug
+++ b/src/blocks/subscription/subscription.pug
@@ -1,5 +1,5 @@
-mixin subscription(data)
+mixin subscription({placeholder})
   .subscription
     form(action="index.html", method="get")
-      input.text-field(placeholder=data.placeholder)
+      input.text-field(placeholder=placeholder)
       button.subscription__button arrow_forward
