#8 added classes to divs

--- a/src/blocks/invoice/invoice.pug
+++ b/src/blocks/invoice/invoice.pug
@@ -2,13 +2,13 @@ mixin invoice()
   .invoice
     .invoice__row
       .invoice__service 9 990&#8381; х 4 суток
-      div 39 960&#8381;
+      div.invoice__sum 39 960&#8381;
     .invoice__row
       .invoice__service.invoice__service--info Сбор за услуги: скидка 2 179&#8381;
-      div 0&#8381;
+      div.invoice__sum 0&#8381;
     .invoice__row
       .invoice__service.invoice__service--info Сбор за дополнительные услуги
-      div 300&#8381;
+      div.invoice__sum 300&#8381;
     .invoice__row.invoice__row--total
       h2.invoice__block Итого
       .invoice__line
