--- a/src/pages/search-room/search-room.pug
+++ b/src/pages/search-room/search-room.pug
@@ -24,7 +24,7 @@ block content
           h3.search-room__sidebar-item-title Диапазон цен
           .search-room__slider
             input.slider.js-slider
-            div Стоимость за сутки пребывания в номере
+            div.search-room__price Стоимость за сутки пребывания в номере
         .search-room__sidebar-item
           h3.search-room__sidebar-item-title checkbox buttons
           +checkbox('Можно курить', false)
