--- a/src/blocks/comment/comment.scss
+++ b/src/blocks/comment/comment.scss
@@ -1,3 +1,5 @@
+@import "../../scss/colors.scss";
+
 .comment {
   display: grid;
   grid-template-columns: 3.57em 1fr;
@@ -12,5 +14,13 @@
 
   &__text {
     line-height: 1.72em;
+  }
+
+  &__avatar {
+    width: 48px;
+    height: 48px;
+    border: 2px solid $white;
+    border-radius: 50%;
+    box-shadow: 0px 10px 20px rgba(31, 32, 65, 0.1);
   }
 }
