--- a/src/pages/landing-layout/landing-layout.scss
+++ b/src/pages/landing-layout/landing-layout.scss
@@ -9,12 +9,8 @@
     top: 140px;
     left: calc(50% - 380px / 2);
     z-index: 1;
-  }
-}
 
-@media screen and (min-width: $small-size) {
-  .landing-layout {
-    &__room-config {
+    @media (min-width: $small-size) {
       left: auto;
     }
   }
