#8 add distructurizatio to radio mixin

--- a/src/blocks/radio/radio.pug
+++ b/src/blocks/radio/radio.pug
@@ -1,4 +1,4 @@
-mixin radio(label, name, checked = false)
+mixin radio({label, name, checked = false})
   label.radio= label
     input.radio__input(type="radio" name=name checked=checked)
     .radio__mark
