--- a/src/blocks/register-card/register-card.pug
+++ b/src/blocks/register-card/register-card.pug
@@ -11,8 +11,8 @@ mixin register-card()
         .register-card__block
           input.text-field(placeholder="Имя").register-card__item
           input.text-field(placeholder="Фамилия").register-card__item
-          +radio('Мужчина', 'gender', true)
-          +radio('Женщина', 'gender')
+          +radio({ label: 'Мужчина', name: 'gender', checked: true })
+          +radio({ label: 'Женщина', name: 'gender'})
         .register-card__block
           h3.register-card__label Дата рождения
           input.text-field(placeholder="ДД.ММ.ГГГГ").js-masked
